themes/fab/style.css
/* ... */
.submenu {
	background-color:#EEE;
	border:thin solid #AAA;
}

/* Thin grey borders around block-level elements */
input,
textarea,
fieldset,
.border1,
.block,
.descriptionbox,
.facts_label, .facts_label02, .facts_label03, .facts_value,
.lifespan_outer,
.list_label, .list_label_wrap, .list_value, .list_value_wrap,
.messagebox,
.optionbox,
.person_box, .person_boxF, .person_boxNN,
.person0, .person1, .person2, .person3, .person4, .person5
.subbar,
#indi_main_blocks, #tabs,
.topbottombar {
	margin:3px;
	padding:3px;
	border:1px solid DarkGray;
	border-radius:3px;
	font-family:inherit;
}

img.block {
	border:none;
	height:20px;
	vertical-align:middle;
}

legend {
	font-weight:bold;
}

/* Indicate that the parent died shortly after the birth */
.parentdeath {
	border:1px solid Black;
}

/* Hyperlinks: regular and help */
a {
	text-decoration:none;
}
a:link, a:visited {
	color:DarkSlateGray;
}
a:hover, a:active {
	color:White !important;
	background-color:DarkSlateGray;
}
a.help {
	font-weight:bold;
	text-shadow:Black 1px 1px 1px;
	color:Yellow !important;
	cursor:help;
}

body {
	color:DimGray;
	background-color:White;
	font:12px sans-serif; /* Use the browser's default font - give control to the user */
	margin:0;
}

img {
	border:0;
}

/* Various text styles */
.warning, .error, .largeError {
	color:red;
	font-weight:bold;
}

/* Fact labels */
.label {
	font-weight:bold;
}

/* Main name on INDI/FAM/etc. pages */
.name_head {
	font-size:150%;
}

/* Elements used on every page */
#header {
	color:#888;
	text-align:center;
}
#topMenu {
	clear:both;
	text-align:center;
	padding-top:1em;
}
#content {
	margin-top:1em;
	margin-bottom:1em;
}
#footer {
	clear:both;
	text-align:center;
	width:99%;
}

/* Block level objects, such as header, footer, etc. */
.block {
	background-color:#EEE;
	clear:none;
}
.blockheader {
	font-weight:bold;
}

/* Pending edits */
.change_new, .nameblue {
	border:solid blue 2px !important;
}
.change_old, .namered {
	color:#888 !important;
	text-decoration:line-through !important;
}

/* Use CSS menus based on nested <ul> */
.makeMenu li {
	background:none !important;
	display:inline;
	position:relative;
	white-space:nowrap;
}

.makeMenu li:before {
	content:" | ";
}
.makeMenu li ul li:before {
	content:"";
}
.makeMenu li:first-child:before {
	content:"";
}

.makeMenu li ul {
	display:none;
	position:absolute;
	left:0;
	top:1.1em;
	background-color:#EEE;
	border:thin solid #AAA;
	z-index:999;
}

html[dir='rtl'] .makeMenu li ul {
	left:auto;
	right:0;
}

/* position sub-sub-menus */
.makeMenu ul ul {
	top:0;
	left:100px;
}
html[dir='rtl'] .makeMenu ul ul {
	top:0;
	left:auto;
	right:100px;
}

.makeMenu li ul li {
	display:block;
	text-align:left;
}

html[dir='rtl'] .makeMenu li ul li {
	text-align:right;
}

.makeMenu, .makeMenu li ul {
	list-style:none;
	margin:0;
	padding:1px;
}

.makeMenu li:hover > ul {
	display:block;
}

.makeMenu ul li a {
	background-color:#EEE;
	padding:0 5px 0 2px;
	display:block;
}

.makeMenu ul li a:hover  {
    background-color:DarkSlateGray;
	color:#000;
}

#menu-language li {text-align:left;} /* The language menu is always LTR, even on RTL pages */
#menu-theme    li {text-align:left;} /* The theme menu is always LTR, even on RTL pages */

/* person boxes are used in various charts */

.person_box img{background-color:#DDF;}
.person_boxF img{background-color:#FDD;}
.person_boxNN img{background-color:#DFD;}

.person_box {
background-color:#DDF;
	overflow:visible;
	height:56px;
}

.person_boxF {
	background-color:#FDD;
	overflow:visible;
	height:56px;
}

.person_boxNN {
	background-color:#DFD;
	overflow:visible;
	height:56px;
}

.action_header, .action_headerF {
	height:76px;
}

.action_headerF {background: #FDD;}
.action_header {background: #DDF;}

/* index.php */
#index_main_blocks {
	width:60%;
	float:left;
}
#index_small_blocks {
	width:40%;
	float:right;
}
#index_full_blocks {
}


.facts_table, .facts_table_rtl {
	width:100%;
}

/* pedigree.php */
.pedigree_image_portrait, .pedigree_image_landscape {
	float:left;
	max-height:48px;
	max-width:48px;
	margin-right:3px;
}

.pedigree_image_portrait_rtl, .pedigree_image_landscape_rtl {
	float:right;
	max-height:48px;
	max-width:48px;
	margin-left:3px;
}

/*-- pedigree chart specific stylesheets --*/
#pedigree_chart {
	position:relative;
	top:-230px;
	left:0;
}

.thumbnail {
height:auto;
padding:5px;
}

/*-- pedigree chart rtl specific stylesheets --*/
html[dir='rtl'] #pedigree_chart {
left:auto;
right:10px;
}

/* Printer friendliness */
@media print {
	#header, #footer {
	display:none;
	}
}

/* Tabular data */
.list_table {
	padding:3px;
	margin-left:auto;
	margin-right:auto;
}
.topbottombar {
	font-weight:bold;
	font-size:125%;
	background-color:#BBB;
	text-align:center;
}
.descriptionbox {
	font-weight:bold;
	background-color:#CCC;
	vertical-align:top;
	white-space:nowrap;
}
.optionbox {
	background-color:#DDD;
	color:black;
	vertical-align:top;
	white-space:nowrap;
}
.facts_label, .facts_label02, .facts_label03 {
	background-color:#CCC;
	width:20%;
	text-align:center;
}

.list_label, .list_value {
	white-space:nowrap;
}
.list_label_wrap, .list_value_wrap {
	white-space:normal;
}

.list_label, .list_label_wrap {
	background-color:#CCC;
}

.list_value, .list_value_wrap {
	background-color:#DDD;
}

.journal_box {
	padding: 3pt;
	border:thin solid #AAA;
	overflow:visible;
}

.news_title {
	font-size:1.10em;
	font-weight:bold;
}

.news_date {
	margin-bottom:12px;
}

/* Autocomplete styles*/
.ac_input {
	background-color:#EEE8AA;
}
.ac_results {
	padding:0;
	border:thin solid #AAA;
	background-color:white;
	overflow:hidden;
	z-index:99999;
}
.ac_results ul {
	width:100%;
	list-style-position:outside;
	list-style:none;
	padding:0;
	margin:0;
}
.ac_results li {
	margin:0;
	padding:2px 5px;
	cursor:default;
	display:block;
	font:menu;
	line-height:14px; /* absolute setting required for firefox? */
	overflow:hidden;
}
.ac_loading {
	background:white url(images/indicator.gif) right center no-repeat;
}
/* ... */

